# generative-ai-orchestration-cpg

./: 5  Initialize_ml_structure_folder.ipynb  README.md
multimodal-rag/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
multimodal-rag/app/: __init__.py  config.py  main.py
multimodal-rag/app/chunking/: __init__.py  chunker.py
multimodal-rag/app/embeddings/: __init__.py  embedding.py
multimodal-rag/app/generation/: __init__.py  generator.py
multimodal-rag/app/ingestion/: __init__.py  ingest.py
multimodal-rag/app/opensearch/: __init__.py  opensearch_client.py
multimodal-rag/app/processors/: __init__.py  base.py  docx_processor.py  factory.py  image_processor.py  pdf_processor.py  pptx_processor.py  (+2 more)
multimodal-rag/notebooks/: Multimodal_RAG_Workflow.ipynb  Test_workflow.ipynb
multimodal-rag/tests/: __init__.py  conftest.py  test_processors.py
retrieval-augmented-generation-scientific-data/: .env  Dockerfile  RAG_Workflow.ipynb  README.md  docker-compose.yml  pyproject.toml  requirements.txt
retrieval-augmented-generation-scientific-data/app/: config.py  main.py
retrieval-augmented-generation-scientific-data/example_docs/: doc1.txt  doc2.txt  document_1.txt  document_10.txt  document_100.txt  document_11.txt  document_12.txt  document_13.txt  document_14.txt  document_15.txt  document_16.txt  document_17.txt  document_18.txt  document_19.txt  document_2.txt  document_20.txt  document_21.txt  document_22.txt  document_23.txt  document_24.txt  document_25.txt  document_26.txt  document_27.txt  document_28.txt  document_29.txt  document_3.txt  document_30.txt  document_31.txt  document_32.txt  document_33.txt  document_34.txt  document_35.txt  document_36.txt  document_37.txt  document_38.txt  document_39.txt  document_4.txt  document_40.txt  document_41.txt  document_42.txt  (+62 more)
retrieval-augmented-generation-scientific-data/tests/: test_rag.py
(+346 files in other folders)
